--- a/Newell-A3.ipynb
+++ b/Newell-A3.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,9 +440,9 @@
     "import time\n",
     "def runExperiment(goalState1, goalState2, goalState3, heuristicList):\n",
     "    startState = [1, 2, 3, 4, 0, 5, 6, 7, 8]\n",
-    "    print(\"\\t\" + str(goalState1) + \"   \"\n",
-    "         + str(goalState2) + \"   \"\n",
-    "         + str(goalState3))\n",
+    "    #print(\"\\t\" + str(goalState1) + \"   \"\n",
+    "    #     + str(goalState2) + \"   \"\n",
+    "    #     + str(goalState3))\n",
     "    \n",
     "    # Building the output\n",
     "    # How to concat https://stackoverflow.com/questions/13079852/how-do-i-stack-two-dataframes-next-to-each-other-in-pandas\n",
@@ -457,7 +457,7 @@
     "        times = []\n",
     "        # Get data from IDS\n",
     "        startTime = time.time()\n",
-    "        idsResult, nodeCount = iterativeDeepeningSearch(startState, goalState, actionsF_8p, takeActionF_8p, 20, True)\n",
+    "        idsResult, nodeCount = iterativeDeepeningSearch(startState, goalState, actionsF_8p, takeActionF_8p, 12, True)\n",
     "        endTime = time.time()\n",
     "        times.append(endTime - startTime)\n",
     "        nodes.append(nodeCount)\n",
@@ -478,13 +478,13 @@
     "                           \"Depths\": depths,\n",
     "                           \"Nodes\":nodes,\n",
     "                            \"EBF\": EBF, \n",
-    "                            \"Time\": times}).set_index(\"Algorithm\"))#Maybe a little hacky\n",
+    "                            \"Time (sec)\": times}).set_index(\"Algorithm\"))\n",
     "    # print(dataFrames)\n",
     "    pandas.set_option(\"precision\", 3)\n",
-    "    pandas.option_context(\"display.colheader_justify\", \"right\")\n",
+    "    #pandas.option_context(\"display.colheader_justify\", \"right\")\n",
     "    #pandas.set_option(\"expand_frame_repr\", False)\n",
     "    keys = [str(l) for l in [goalState1, goalState2, goalState3]]\n",
-    "    print(pandas.concat(dataFrames, axis=1))\n",
+    "    print(pandas.concat(dataFrames, axis=1, keys = keys))\n",
     "    "
    ]
   },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,14 +557,20 @@
     "    for depth in range(0, maxDepth):\n",
     "        result = depthLimitedSearch(startState, goalState, actionsF, takeActionF, depth, node_count)\n",
     "        if result == \"failure\":\n",
-    "            return \"failure\"\n",
+    "            if countNodes:\n",
+    "                return \"failure\", node_count[0]\n",
+    "            else:\n",
+    "                return \"failure\"\n",
     "        if result != \"cutoff\":\n",
     "            result.insert(0, startState)\n",
     "            if countNodes:\n",
     "                return result, node_count[0]\n",
     "            else: \n",
     "                return result\n",
-    "    return \"cutoff\""
+    "    if countNodes:\n",
+    "        return \"cutoff\", node_count[0]\n",
+    "    else:\n",
+    "        return \"cutoff\""
    ]
   },
   {
@@ -576,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +958,7 @@
        "[('b', 1), ('c', 1)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +979,7 @@
        "('b', 1)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +999,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1019,7 @@
        "1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1039,7 @@
        "['a', 'c', 'h', 'i', 'k', 'z']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1059,7 @@
        "(['a', 'c', 'h', 'i', 'k', 'z'], 5)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,33 +1078,112 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Here we will use the `runExperiment` function to test out the algorithms on different goal states. First we do the given experiment to verify the values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t[1, 2, 3, 4, 0, 5, 6, 7, 8]   [1, 2, 3, 4, 5, 8, 6, 0, 7]   [1, 0, 3, 4, 5, 8, 2, 6, 7]\n",
-      "           Depths  Nodes  EBF       Time  Depths  Nodes    EBF       Time  \\\n",
-      "Algorithm                                                                   \n",
-      "IDS             0      0  0.0  4.768e-06       3     43  3.086  6.127e-05   \n",
-      "A*h1            0      0  0.0  9.060e-06       3    116  4.488  4.013e-04   \n",
-      "A*h2            0      0  0.0  5.484e-06       3     51  3.297  2.019e-04   \n",
-      "A*h3            0      0  0.0  5.245e-06       3      9  1.578  4.721e-05   \n",
+      "          [1, 2, 3, 4, 0, 5, 6, 7, 8]                        \\\n",
+      "                               Depths Nodes  EBF Time (sec)   \n",
+      "Algorithm                                                     \n",
+      "IDS                                 0     0  0.0  3.028e-05   \n",
+      "A*h1                                0     0  0.0  5.531e-05   \n",
+      "A*h2                                0     0  0.0  4.125e-05   \n",
+      "A*h3                                0     0  0.0  3.815e-05   \n",
       "\n",
-      "           Depths   Nodes    EBF   Time  \n",
-      "Algorithm                                \n",
-      "IDS            11  225850  2.954  0.243  \n",
-      "A*h1           11  643246  3.263  2.017  \n",
-      "A*h2           11  100046  2.733  0.371  \n",
-      "A*h3           11    4785  2.031  0.022  \n"
+      "          [1, 2, 3, 4, 5, 8, 6, 0, 7]                          \\\n",
+      "                               Depths Nodes    EBF Time (sec)   \n",
+      "Algorithm                                                       \n",
+      "IDS                                 3    43  3.086  2.847e-04   \n",
+      "A*h1                                3   116  4.488  1.611e-03   \n",
+      "A*h2                                3    51  3.297  7.849e-04   \n",
+      "A*h3                                3     9  1.578  1.848e-04   \n",
+      "\n",
+      "          [1, 0, 3, 4, 5, 8, 2, 6, 7]                            \n",
+      "                               Depths   Nodes    EBF Time (sec)  \n",
+      "Algorithm                                                        \n",
+      "IDS                                11  225850  2.954      0.266  \n",
+      "A*h1                               11  643246  3.263      1.650  \n",
+      "A*h2                               11  100046  2.733      0.291  \n",
+      "A*h3                               11    4785  2.031      0.017  \n"
      ]
     }
    ],
    "source": [
     "g1 = [1,2,3,4,0,5,6,7,8]\n",
+    "g2 = [1,2,3,4,5,8,6,0,7]\n",
+    "g3 = [1,0,3,4,5,8,2,6,7]\n",
+    "hlist = [h1_8p, h2_8p, h3_8p]\n",
+    "runExperiment(g1,g2,g3,hlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing some more states and some unreachable states."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "startState = [1,0,3,2,4,5,6,7,8]\n",
+    "g1 = [1,2,3,4,0,5,6,7,8]\n",
+    "# actionsF, takeActionF, goalTestF, hF, countNodes = False\n",
+    "aStarSearch(startState, actionsF_8p, takeActionF_8p, lambda s: goalTestF_8p(s, g1),\n",
+    "                                 lambda s: h3_8p(s, g1), True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m~/classes/cs440/A3grader.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mg3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mhlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mh1_8p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh2_8p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh3_8p\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mrunExperiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mg2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mg3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/classes/cs440/A3grader.py\u001b[0m in \u001b[0;36mrunExperiment\u001b[0;34m(goalState1, goalState2, goalState3, heuristicList)\u001b[0m\n\u001b[1;32m     31\u001b[0m             hResult, nodeCount = aStarSearch(startState, actionsF_8p, takeActionF_8p, \n\u001b[1;32m     32\u001b[0m                                  \u001b[0;32mlambda\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mgoalTestF_8p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgoalState\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m                                  lambda s: h(s, goalState), True)\n\u001b[0m\u001b[1;32m     34\u001b[0m             \u001b[0mendTime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mtimes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendTime\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstartTime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearch\u001b[0;34m(startState, actionsF, takeActionF, goalTestF, hF, countNodes)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "g1 = [1,0,3,2,4,5,6,7,8]\n",
     "g2 = [1,2,3,4,5,8,6,0,7]\n",
     "g3 = [1,0,3,4,5,8,2,6,7]\n",
     "hlist = [h1_8p, h2_8p, h3_8p]\n",
@@ -1121,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
