--- a/Newell-A3.ipynb
+++ b/Newell-A3.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
     "                            \"Time (sec)\": times}).set_index(\"Algorithm\"))\n",
     "    # print(dataFrames)\n",
     "    pandas.set_option(\"precision\", 3)\n",
-    "    #pandas.option_context(\"display.colheader_justify\", \"right\")\n",
+    "    pandas.option_context(\"display.colheader_justify\", \"full\")\n",
     "    #pandas.set_option(\"expand_frame_repr\", False)\n",
     "    keys = [str(l) for l in [goalState1, goalState2, goalState3]]\n",
     "    print(pandas.concat(dataFrames, axis=1, keys = keys))\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "[('b', 1), ('c', 1)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
        "('b', 1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
        "1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        "['a', 'c', 'h', 'i', 'k', 'z']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
        "(['a', 'c', 'h', 'i', 'k', 'z'], 5)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -1098,25 +1098,25 @@
       "          [1, 2, 3, 4, 0, 5, 6, 7, 8]                        \\\n",
       "                               Depths Nodes  EBF Time (sec)   \n",
       "Algorithm                                                     \n",
-      "IDS                                 0     0  0.0  3.028e-05   \n",
-      "A*h1                                0     0  0.0  5.531e-05   \n",
-      "A*h2                                0     0  0.0  4.125e-05   \n",
-      "A*h3                                0     0  0.0  3.815e-05   \n",
+      "IDS                                 0     0  0.0  1.574e-05   \n",
+      "A*h1                                0     0  0.0  3.290e-05   \n",
+      "A*h2                                0     0  0.0  2.027e-05   \n",
+      "A*h3                                0     0  0.0  1.669e-05   \n",
       "\n",
       "          [1, 2, 3, 4, 5, 8, 6, 0, 7]                          \\\n",
       "                               Depths Nodes    EBF Time (sec)   \n",
       "Algorithm                                                       \n",
-      "IDS                                 3    43  3.086  2.847e-04   \n",
-      "A*h1                                3   116  4.488  1.611e-03   \n",
-      "A*h2                                3    51  3.297  7.849e-04   \n",
-      "A*h3                                3     9  1.578  1.848e-04   \n",
+      "IDS                                 3    43  3.086  3.831e-04   \n",
+      "A*h1                                3   116  4.488  2.616e-03   \n",
+      "A*h2                                3    51  3.297  1.361e-03   \n",
+      "A*h3                                3     9  1.578  2.246e-04   \n",
       "\n",
       "          [1, 0, 3, 4, 5, 8, 2, 6, 7]                            \n",
       "                               Depths   Nodes    EBF Time (sec)  \n",
       "Algorithm                                                        \n",
-      "IDS                                11  225850  2.954      0.266  \n",
-      "A*h1                               11  643246  3.263      1.650  \n",
-      "A*h2                               11  100046  2.733      0.291  \n",
+      "IDS                                11  225850  2.954      0.247  \n",
+      "A*h1                               11  643246  3.263      1.667  \n",
+      "A*h2                               11  100046  2.733      0.298  \n",
       "A*h3                               11    4785  2.031      0.017  \n"
      ]
     }
@@ -1138,20 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "startState = [1,0,3,2,4,5,6,7,8]\n",
-    "g1 = [1,2,3,4,0,5,6,7,8]\n",
-    "# actionsF, takeActionF, goalTestF, hF, countNodes = False\n",
-    "aStarSearch(startState, actionsF_8p, takeActionF_8p, lambda s: goalTestF_8p(s, g1),\n",
-    "                                 lambda s: h3_8p(s, g1), True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1161,8 +1148,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m~/classes/cs440/A3grader.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mg3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mhlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mh1_8p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh2_8p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh3_8p\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mrunExperiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mg2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mg3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/classes/cs440/A3grader.py\u001b[0m in \u001b[0;36mrunExperiment\u001b[0;34m(goalState1, goalState2, goalState3, heuristicList)\u001b[0m\n\u001b[1;32m     31\u001b[0m             hResult, nodeCount = aStarSearch(startState, actionsF_8p, takeActionF_8p, \n\u001b[1;32m     32\u001b[0m                                  \u001b[0;32mlambda\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mgoalTestF_8p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgoalState\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m                                  lambda s: h(s, goalState), True)\n\u001b[0m\u001b[1;32m     34\u001b[0m             \u001b[0mendTime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mtimes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendTime\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstartTime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/classes/cs440/A3grader.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# actionsF, takeActionF, goalTestF, hF, countNodes = False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m aStarSearch(startState, actionsF_8p, takeActionF_8p, lambda s: goalTestF_8p(s, g1),\n\u001b[0;32m----> 5\u001b[0;31m                                  lambda s: h3_8p(s, g1), True)\n\u001b[0m",
       "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearch\u001b[0;34m(startState, actionsF, takeActionF, goalTestF, hF, countNodes)\u001b[0m\n",
       "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
       "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
@@ -1177,11 +1163,24 @@
       "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
       "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
       "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
-      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36maStarSearchHelper\u001b[0;34m(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count)\u001b[0m\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(n)\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
+   "source": [
+    "startState = [1,0,3,2,4,5,6,7,8]\n",
+    "g1 = [1,2,3,4,0,5,6,7,8]\n",
+    "# actionsF, takeActionF, goalTestF, hF, countNodes = False\n",
+    "aStarSearch(startState, actionsF_8p, takeActionF_8p, lambda s: goalTestF_8p(s, g1),\n",
+    "                                 lambda s: h3_8p(s, g1), True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "g1 = [1,0,3,2,4,5,6,7,8]\n",
     "g2 = [1,2,3,4,5,8,6,0,7]\n",
@@ -1206,60 +1205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "======================= Code Execution =======================\n",
-      "\n",
-      "Extracting python code from notebook named 'Newell-A3.ipynb' and storing in notebookcode.py\n",
-      "Removing all statements that are not function or class defs or import statements.\n",
-      "\n",
-      "Testing actionsF_8p([1, 2, 3, 4, 5, 6, 7, 0, 8])\n",
-      "\n",
-      "--- 5/5 points. Your actionsF_8p correctly returned [('left', 1), ('right', 1), ('up', 1)]\n",
-      "\n",
-      "Testing takeActionF_8p([1, 2, 3, 4, 5, 6, 7, 0, 8], (up, 1))\n",
-      "\n",
-      "--- 5/5 points. Your takeActionsF_8p correctly returned ([1, 2, 3, 4, 0, 6, 7, 5, 8], 1)\n",
-      "\n",
-      "Testing goalTestF_8p([1, 2, 3, 4, 5, 6, 7, 0, 8], [1, 2, 3, 4, 5, 6, 7, 0, 8])\n",
-      "\n",
-      "--- 5/5 points. Your goalTestF_8p correctly True\n",
-      "\n",
-      "Testing aStarSearch(1, 2, 3, 4, 5, 6, 7, 0, 8],\n",
-      "                     actionsF_8p, takeActionF_8p,\n",
-      "                     lambda s: goalTestF_8p(s, [0, 2, 3, 1, 4,  6, 7, 5, 8]),\n",
-      "                     lambda s: h1_8p(s, [0, 2, 3, 1, 4,  6, 7, 5, 8]))\n",
-      "\n",
-      "--- 20/20 points. Your search correctly returned ([[1, 2, 3, 4, 5, 6, 7, 0, 8], [1, 2, 3, 4, 0, 6, 7, 5, 8], [1, 2, 3, 0, 4, 6, 7, 5, 8], [0, 2, 3, 1, 4, 6, 7, 5, 8]], 3)\n",
-      "\n",
-      "Testing iterativeDeepeningSearch([1, 2, 3, 4, 5, 6, 7, 0, 8], \n",
-      "                                 [0, 2, 3, 1, 4,  6, 7, 5, 8],\n",
-      "                                 actionsF_8p, takeActionF_8p, 10)\n",
-      "\n",
-      "--- 15/15 points. Your search correctly returned [[1, 2, 3, 4, 5, 6, 7, 0, 8], [1, 2, 3, 4, 0, 6, 7, 5, 8], [1, 2, 3, 0, 4, 6, 7, 5, 8], [0, 2, 3, 1, 4, 6, 7, 5, 8]]\n",
-      "\n",
-      "Testing iterativeDeepeningSearch([5, 2, 8, 0, 1, 4, 3, 7, 6], \n",
-      "                                 [0, 2, 3, 1, 4,  6, 7, 5, 8],\n",
-      "                                 actionsF_8p, takeActionF_8p, 10)\n",
-      "\n",
-      "--- 15/15 points. Your search correctly returned cutoff\n",
-      "\n",
-      "Testing ebf(200, 6, 0.1)\n",
-      "\n",
-      "--- 15/15 points. Your call to ebf correctly returned 2.185373306274414\n",
-      "\n",
-      "cs440 Grade is 80/80\n",
-      "\n",
-      "Up to 20 more points will be given based on the quality of your descriptions of the method and the results.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run -i A3grader.py"
    ]
