--- a/Newell-A4.ipynb
+++ b/Newell-A4.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +119,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "make a move. Looks like this works fine too, note how we need to subtract from move[1] in order to make the correct move (second post is index one). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeMove(state, move):\n",
+    "    newState = state.copy()\n",
+    "    for l in newState:\n",
+    "        if move[0] in l:\n",
+    "            l.remove(move[0])\n",
+    "            newState[move[1] - 1].append(move[0])\n",
+    "    return newState"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finds the valid moves from a given state by, stuff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,22 +223,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "make a move. Looks like this works fine too, note how we need to subtract from move[1] in order to make the correct move (second post is index one). "
+    "Epsilon greedy function. Just a cleaner way of writing trainQ. Either chooses a random move, or based on Q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def makeMove(state, move):\n",
-    "    newState = state.copy()\n",
-    "    for l in newState:\n",
-    "        if move[0] in l:\n",
-    "            l.remove(move[0])\n",
-    "            newState[move[1] - 1].append(move[0])\n",
-    "    return newState"
+    "import numpy as np\n",
+    "def epsilonGreedy(epsilon, Q, state):\n",
+    "    validMoves = validMoves(state)\n",
+    "    if np.random.uniform() < epsilon:\n",
+    "        #This is the random move, just choose one of our valid moves\n",
+    "        return np.random.choice(validMoves)\n",
+    "    else:\n",
+    "        # Use our Q function to greedily pick the next move. \n",
+    "        statesAndMovesTuples = [stateMoveTuple(state, move) for move in validMoves]\n",
+    "        Qs = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the Q training algorithm from the tictactoe version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epsilon = 1.0 #This could easily be a function parameter. \n",
+    "def trainQ(nRepetitions, learningRate, epsilonDecayFactor, validMovesF, makeMoveF):\n",
+    "    #Dictionary to represent our Q function. \n",
+    "    #MakeTuple of the state can get the unique value.\n",
+    "    Q = {}\n",
+    "    for trail in range(nRepetitions):\n",
+    "        epsilon *= epsilonDecayFactor\n",
+    "        step = 0\n",
+    "        state = [[1,2,3],[],[]] #Default starting state.\n",
+    "        done = False\n",
+    "        \n",
+    "        while not done:\n",
+    "            step += 1 #not sure what this does. Reinforcement?\n",
+    "            \n",
+    "            move = epsilonGreedy(epsilon, Q, state)\n",
+    "            "
    ]
   },
   {
