--- a/Newell-A4.ipynb
+++ b/Newell-A4.ipynb
@@ -238,7 +238,7 @@
     "        if not nullCheck(state, 0, 0) or state[1][0] < state[0][0]:\n",
     "            retList.append([2,1])\n",
     "        if not nullCheck(state, 2, 0) or state[1][0] < state[2][0]:\n",
-    "            retList.append([2,3])\n",
+    "            retList.append([2,3])s\n",
     "    if nullCheck(state, 2, 0):\n",
     "        if not nullCheck(state, 0, 0) or state[2][0] < state[0][0]:\n",
     "            retList.append([3,1])\n",
