--- a/Newell-A4.ipynb
+++ b/Newell-A4.ipynb
@@ -4,71 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reinforcement Learning Solution to the Towers of Hanoi Puzzle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this assignment, you will use reinforcement learning to solve the [Towers of Hanoi](https://en.wikipedia.org/wiki/Tower_of_Hanoi) puzzle.  \n",
-    "\n",
-    "To accomplish this, you must modify the code discussed in lecture for learning to play Tic-Tac-Toe.  Modify the code  so that it learns to solve the three-disk, three-peg\n",
-    "Towers of Hanoi Puzzle.  In some ways, this will be simpler than the\n",
-    "Tic-Tac-Toe code.  \n",
-    "\n",
-    "Steps required to do this include the following:\n",
-    "\n",
-    "  - Represent the state, and use it as a tuple as a key to the Q dictionary.\n",
-    "  - Make sure only valid moves are tried from each state.\n",
-    "  - Assign reinforcement of $1$ to each move, even for the move that results in the goal state.\n",
-    "\n",
-    "Make a plot of the number of steps required to reach the goal for each\n",
-    "trial.  Each trial starts from the same initial state.  Decay epsilon\n",
-    "as in the Tic-Tac-Toe code."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Requirements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, how should we represent the state of this puzzle?  We need to keep track of which disks are on which pegs. Name the disks 1, 2, and 3, with 1 being the smallest disk and 3 being the largest. The set of disks on a peg can be represented as a list of integers.  Then the state can be a list of three lists.\n",
-    "\n",
-    "For example, the starting state with all disks being on the left peg would be `[[1, 2, 3], [], []]`.  After moving disk 1 to peg 2, we have `[[2, 3], [1], []]`.\n",
-    "\n",
-    "To represent that move we just made, we can use a list of two peg numbers, like `[1, 2]`, representing a move of the top disk on peg 1 to peg 2."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now on to some functions. Define at least the following functions. Examples showing required output appear below.\n",
-    "\n",
-    "   - `printState(state)`: prints the state in the form shown below\n",
-    "   - `validMoves(state)`: returns list of moves that are valid from `state`\n",
-    "   - `makeMove(state, move)`: returns new (copy of) state after move has been applied.\n",
-    "   - `trainQ(nRepetitions, learningRate, epsilonDecayFactor, validMovesF, makeMoveF)`: train the Q function for number of repetitions, decaying epsilon at start of each repetition. Returns Q and list or array of number of steps to reach goal for each repetition.\n",
-    "   - `testQ(Q, maxSteps, validMovesF, makeMoveF)`: without updating Q, use Q to find greedy action each step until goal is found. Return path of states.\n",
-    "\n",
-    "A function that you might choose to implement is\n",
-    "\n",
-    "   - `stateMoveTuple(state, move)`: returns tuple of state and move.  \n",
-    "    \n",
-    "This is useful for converting state and move to a key to be used for the Q dictionary.\n",
-    "\n",
-    "Show the code and results for testing each function.  Then experiment with various values of `nRepetitions`, `learningRate`, and `epsilonDecayFactor` to find values that work reasonably well, meaning that eventually the minimum solution path of seven steps is found consistently.\n",
-    "\n",
-    "Make a plot of the number of steps in the solution path versus number of repetitions. The plot should clearly show the number of steps in the solution path eventually reaching the minimum of seven steps, though the decrease will not be monotonic.  Also plot a horizontal, dashed line at 7 to show the optimal path length.\n",
-    "\n",
-    "Add markdown cells in which you describe the Q learning algorithm and your implementation of Q learning as applied to the Towers of Hanoi problem.  Use at least 15 sentences, in one or more markdown cells."
+    "# Reinforcement Learning Solution to the Towers of Hanoi Puzzle\n",
+    "Ben Newell"
    ]
   },
   {
@@ -812,106 +749,6 @@
     "The graphs of the different learning rates demonstrate the results of changing `learningRate`. The low values of .1 and .2 still have variation in the number of steps at the end of 50 trials. Then by a learning rate of .4 the algorithm finds the optimal value of 7. The speed at which it reaches the optimal path continues to improve and in my trail the value of .9 was the fastest learning, correctly finding the 7 step solution. \n",
     "\n",
     "These graphs on the x axis show the number of steps at each repitition. We can see clearly that if `nRepititions` was around or below 30 the algorithm probably would not come to learn the optimal solution very well. Based on the two graphs above, high enough `nRepititions` will lead to the correct solution. I ran a few trials to see whether `nRepititions` would effect the number of entries in the Q dictionary. After only only 5 repititions, the Q  dictionary had reached 78 entries because of how much this implementation favors new moves. These values were not fully accurate, but had been seen. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Grading"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Download and extract `A4grader.py` from [A4grader.tar](http://www.cs.colostate.edu/~anderson/cs440/notebooks/A4grader.tar)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "======================= Code Execution =======================\n",
-      "\n",
-      "Extracting python code from notebook named 'Newell-A4.ipynb' and storing in notebookcode.py\n",
-      "Removing all statements that are not function or class defs or import statements.\n",
-      "\n",
-      "Testing validMoves([[1], [2], [3]])\n",
-      "\n",
-      "--- 10/10 points. Correctly returned [[1, 2], [1, 3], [2, 3]]\n",
-      "\n",
-      "Testing validMoves([[], [], [1, 2, 3]])\n",
-      "\n",
-      "--- 10/10 points. Correctly returned [[3, 1], [3, 2]]\n",
-      "\n",
-      "Testing makeMove([[], [], [1, 2, 3]], [3, 2])\n",
-      "\n",
-      "--- 10/10 points. Correctly returned [[], [1], [2, 3]]\n",
-      "\n",
-      "Testing makeMove([[2], [3], [1]], [1, 2])\n",
-      "\n",
-      "--- 10/10 points. Correctly returned [[], [2, 3], [1]]\n",
-      "\n",
-      "Testing   Q, steps = trainQ(1000, 0.5, 0.7, validMoves, makeMove).\n",
-      "\n",
-      "--- 10/10 points. Q dictionary has correct number of entries.\n",
-      "\n",
-      "--- 10/10 points. The mean of the number of steps of 7.566 is correctly < 10.\n",
-      "\n",
-      "Testing   path = testQ(Q, 20, validMoves, makeMove).\n",
-      "\n",
-      "--- 20/20 points. Correctly returns path of length 8, which is correctly less than 10.\n",
-      "\n",
-      "cs440 Execution Grade is 80 / 80\n",
-      "\n",
-      " Remaining 20 points will be based on your text describing the trainQ and testQ functions.\n",
-      "\n",
-      "cs440 FINAL GRADE is   / 100\n",
-      "\n",
-      "cs440 EXTRA CREDIT is   / 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%run -i A4grader.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extra Credit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Modify your code to solve the Towers of Hanoi puzzle with 4 disks instead of 3.  Name your functions\n",
-    "\n",
-    "    - printState_4disk\n",
-    "    - validMoves_4disk\n",
-    "    - makeMove_4disk\n",
-    "\n",
-    "Find values for number of repetitions, learning rate, and epsilon decay factor for which trainQ learns a Q function that testQ can use to find the shortest solution path.  Include the output from the successful calls to trainQ and testQ."
    ]
   }
  ],
