finishes code for a6

--- a/Newell-A6.ipynb
+++ b/Newell-A6.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,6 +308,62 @@
     "        classes = [class_number for class_number,pair in assignments.items() if pair[1] == t]\n",
     "        print(t + ('   {}   '*len(classes)).format(*classes))\n",
     "        #print(classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extra Credit Function\n",
+    "\n",
+    "This will prefer a solution that has later meeting times and schedules the entry level classes around one and two.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def schedule_advanced(classes, times, rooms, max_steps, max_tries):\n",
+    "    # call schedule and get the returns\n",
+    "    best_schedule, best_steps = schedule(classes, times, rooms, max_steps)\n",
+    "    min_count = preference_count(best_schedule)\n",
+    "    # min solution is set to that one.\n",
+    "    # min bad things is set to bad_things(schedule)\n",
+    "    # for number of steps\n",
+    "    for _ in range(max_tries):\n",
+    "        new_schedule, new_steps = schedule(classes, times, rooms, max_steps)\n",
+    "        new_count = preference_count(new_schedule)\n",
+    "        if new_count < min_count:\n",
+    "            best_schedule = new_schedule\n",
+    "            min_count = new_count\n",
+    "            best_steps = new_steps\n",
+    "    return best_schedule, best_steps\n",
+    "    # if min bad things > badThings[step], replace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preference_count(schedule):\n",
+    "    #returns a count of violated preference.\n",
+    "    count = 0\n",
+    "    # count each class that occurs at 9, 12 or 4.\n",
+    "    for class_name in schedule:\n",
+    "        _, time = schedule[class_name]\n",
+    "\n",
+    "        if time == \" 9 am\" or time == \"12 pm\" or time == \" 4 pm\":\n",
+    "            count += 1\n",
+    "        if class_name == \"CS163\" or class_name == \"CS164\":\n",
+    "            if not (time == \" 1 pm\" or time == \" 2 pm\"):\n",
+    "                count += 1\n",
+    "    return count\n",
+    "        \n",
+    "    # do not count if CS163 and CS164 meeting at 1 pm or 2 pm, otherwise count for each non occurance."
    ]
   },
   {
@@ -326,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -902,10 +958,58 @@
        "  ('CSB 425', ' 3 pm'),\n",
        "  ('CSB 130', ' 4 pm'),\n",
        "  ('CSB 325', ' 4 pm'),\n",
+       "  ('CSB 425', ' 4 pm')],\n",
+       " 'CS898': [('CSB 130', ' 9 am'),\n",
+       "  ('CSB 325', ' 9 am'),\n",
+       "  ('CSB 425', ' 9 am'),\n",
+       "  ('CSB 130', '10 am'),\n",
+       "  ('CSB 325', '10 am'),\n",
+       "  ('CSB 425', '10 am'),\n",
+       "  ('CSB 130', '11 am'),\n",
+       "  ('CSB 325', '11 am'),\n",
+       "  ('CSB 425', '11 am'),\n",
+       "  ('CSB 130', '12 pm'),\n",
+       "  ('CSB 325', '12 pm'),\n",
+       "  ('CSB 425', '12 pm'),\n",
+       "  ('CSB 130', ' 1 pm'),\n",
+       "  ('CSB 325', ' 1 pm'),\n",
+       "  ('CSB 425', ' 1 pm'),\n",
+       "  ('CSB 130', ' 2 pm'),\n",
+       "  ('CSB 325', ' 2 pm'),\n",
+       "  ('CSB 425', ' 2 pm'),\n",
+       "  ('CSB 130', ' 3 pm'),\n",
+       "  ('CSB 325', ' 3 pm'),\n",
+       "  ('CSB 425', ' 3 pm'),\n",
+       "  ('CSB 130', ' 4 pm'),\n",
+       "  ('CSB 325', ' 4 pm'),\n",
+       "  ('CSB 425', ' 4 pm')],\n",
+       " 'CS899': [('CSB 130', ' 9 am'),\n",
+       "  ('CSB 325', ' 9 am'),\n",
+       "  ('CSB 425', ' 9 am'),\n",
+       "  ('CSB 130', '10 am'),\n",
+       "  ('CSB 325', '10 am'),\n",
+       "  ('CSB 425', '10 am'),\n",
+       "  ('CSB 130', '11 am'),\n",
+       "  ('CSB 325', '11 am'),\n",
+       "  ('CSB 425', '11 am'),\n",
+       "  ('CSB 130', '12 pm'),\n",
+       "  ('CSB 325', '12 pm'),\n",
+       "  ('CSB 425', '12 pm'),\n",
+       "  ('CSB 130', ' 1 pm'),\n",
+       "  ('CSB 325', ' 1 pm'),\n",
+       "  ('CSB 425', ' 1 pm'),\n",
+       "  ('CSB 130', ' 2 pm'),\n",
+       "  ('CSB 325', ' 2 pm'),\n",
+       "  ('CSB 425', ' 2 pm'),\n",
+       "  ('CSB 130', ' 3 pm'),\n",
+       "  ('CSB 325', ' 3 pm'),\n",
+       "  ('CSB 425', ' 3 pm'),\n",
+       "  ('CSB 130', ' 4 pm'),\n",
+       "  ('CSB 325', ' 4 pm'),\n",
        "  ('CSB 425', ' 4 pm')]}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,6 +1021,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shortened set to see what solutions it comes up with\n",
+    "classes = ['CS160', 'CS163', 'CS164',\n",
+    "           'CS220', 'CS270', 'CS253',\n",
+    "           'CS320', 'CS314', 'CS356', 'CS370',\n",
+    "           'CS410', 'CS414', 'CS420']\n",
+    "times = [' 9 am',\n",
+    "         '10 am',\n",
+    "         '11 am',\n",
+    "         '12 pm',\n",
+    "         ' 1 pm',\n",
+    "         ' 2 pm',\n",
+    "         ' 3 pm',\n",
+    "         ' 4 pm']\n",
+    "rooms = ['CSB 130', 'CSB 325', 'CSB 425']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       CSB 130    CSB 325    CSB 425 \n",
+      "------------------------------------\n",
+      " 9 am   CS220      CS356      CS430   \n",
+      "10 am   CS314      CS440      CS540   \n",
+      "11 am   CS160      CS253      CS453   \n",
+      "12 pm   CS410      CS510   \n",
+      " 1 pm   CS164      CS414      CS535   \n",
+      " 2 pm   CS163      CS270      CS464   \n",
+      " 3 pm   CS370      CS445      CS545   \n",
+      " 4 pm   CS320      CS420      CS514   \n"
+     ]
+    }
+   ],
+   "source": [
+    "best, steps = schedule_advanced(classes, times, rooms, 100, 5000)\n",
+    "display(best, rooms, times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preference_count(best)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -925,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,15 +1122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 0 steps\n",
-      "{'CS160': ('CSB 325', ' 1 pm'), 'CS163': ('CSB 425', '12 pm'), 'CS164': ('CSB 130', ' 3 pm'), 'CS220': ('CSB 325', ' 2 pm'), 'CS270': ('CSB 130', '11 am'), 'CS253': ('CSB 130', '10 am'), 'CS320': ('CSB 325', ' 9 am'), 'CS314': ('CSB 425', '11 am'), 'CS356': ('CSB 425', ' 2 pm'), 'CS370': ('CSB 325', '12 pm'), 'CS410': ('CSB 325', '11 am'), 'CS414': ('CSB 425', ' 9 am'), 'CS420': ('CSB 425', ' 3 pm'), 'CS430': ('CSB 130', ' 1 pm'), 'CS440': ('CSB 325', ' 4 pm'), 'CS445': ('CSB 130', '12 pm'), 'CS453': ('CSB 425', '10 am'), 'CS464': ('CSB 130', ' 2 pm'), 'CS510': ('CSB 130', ' 9 am'), 'CS514': ('CSB 325', ' 3 pm'), 'CS535': ('CSB 425', ' 1 pm'), 'CS540': ('CSB 425', ' 4 pm'), 'CS545': ('CSB 325', '10 am')}\n"
+      "Took 11 steps\n",
+      "{'CS160': ('CSB 130', ' 4 pm'), 'CS163': ('CSB 325', ' 3 pm'), 'CS164': ('CSB 130', '12 pm'), 'CS220': ('CSB 425', '10 am'), 'CS270': ('CSB 130', ' 9 am'), 'CS253': ('CSB 130', '11 am'), 'CS320': ('CSB 425', ' 9 am'), 'CS314': ('CSB 325', '11 am'), 'CS356': ('CSB 130', ' 2 pm'), 'CS370': ('CSB 425', ' 1 pm'), 'CS410': ('CSB 425', '12 pm'), 'CS414': ('CSB 425', ' 2 pm'), 'CS420': ('CSB 325', '10 am'), 'CS430': ('CSB 325', ' 1 pm'), 'CS440': ('CSB 325', ' 9 am'), 'CS445': ('CSB 130', ' 3 pm'), 'CS453': ('CSB 425', '11 am'), 'CS464': ('CSB 425', ' 4 pm'), 'CS510': ('CSB 130', '10 am'), 'CS514': ('CSB 325', '12 pm'), 'CS535': ('CSB 130', ' 1 pm'), 'CS540': ('CSB 425', ' 3 pm'), 'CS545': ('CSB 325', ' 2 pm')}\n"
      ]
     }
    ],
@@ -970,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -979,19 +1152,39 @@
      "text": [
       "       CSB 130    CSB 325    CSB 425 \n",
       "------------------------------------\n",
-      " 9 am   CS320      CS414      CS510   \n",
-      "10 am   CS253      CS453      CS545   \n",
-      "11 am   CS270      CS314      CS410   \n",
-      "12 pm   CS163      CS370      CS445   \n",
-      " 1 pm   CS160      CS430      CS535   \n",
-      " 2 pm   CS220      CS356      CS464   \n",
-      " 3 pm   CS164      CS420      CS514   \n",
-      " 4 pm   CS440      CS540   \n"
+      " 9 am   CS270      CS320      CS440   \n",
+      "10 am   CS220      CS420      CS510   \n",
+      "11 am   CS253      CS314      CS453   \n",
+      "12 pm   CS164      CS410      CS514   \n",
+      " 1 pm   CS370      CS430      CS535   \n",
+      " 2 pm   CS356      CS414      CS545   \n",
+      " 3 pm   CS163      CS445      CS540   \n",
+      " 4 pm   CS160      CS464   \n"
      ]
     }
    ],
    "source": [
     "display(assignments, rooms, times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preference_count(assignments)"
    ]
   },
   {
@@ -1027,10 +1220,42 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR:root:File `'A6grader.py'` not found.\n"
+      "\n",
+      "======================= Code Execution =======================\n",
+      "\n",
+      "Extracting python code from notebook named 'Newell-A6.ipynb' and storing in notebookcode.py\n",
+      "Removing all statements that are not function or class defs or import statements.\n",
+      "\n",
+      "Testing constraints_ok('CS410', ('CSB 130', ' 9 am'), 'CS510', ('CSB 130', ' 9 am'))\n",
+      "\n",
+      "--- 10/10 points. Your constraints_ok function correctly returned False\n",
+      "\n",
+      "Testing constraints_ok('CS410', ('CSB 130', ' 9 am'), 'CS510', ('CSB 130', '10 am'))\n",
+      "\n",
+      "--- 10/10 points. Your constraints_ok function correctly returned True\n",
+      "\n",
+      "Testing constraints_ok('CS410', ('CSB 130', '10 am'), 'CS430', ('CSB 425', '10 am')\n",
+      "\n",
+      "--- 10/10 points. Your constraints_ok function correctly returned False\n",
+      "\n",
+      "Testing  result, nsteps = schedule(classes, times, rooms, 100)\n",
+      "\n",
+      "--- 30/30 points. Your schedule function returned a valid schedule.\n",
+      "\n",
+      "Testing  call to schedule again with two more classes.\n",
+      "\n",
+      "--- 30/30 points. Your schedule function correctly returned None.\n",
+      "\n",
+      "cs440 Execution grade is 90 / 90\n",
+      "\n",
+      "---   / 10 points for result of your display function.\n",
+      "\n",
+      "cs440 FINAL GRADE is   / 100\n",
+      "\n",
+      "cs440 EXTRA CREDIT grade is  / 1\n"
      ]
     }
    ],
